--- a/spring-framework/pom.xml
+++ b/spring-framework/pom.xml
@@ -10,6 +10,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>spring-configuration</module>
+        <module>spring-beans</module>
     </modules>
 
     <properties>
