Injecting Beans and fixes

--- a/spring-framework/spring-beans-injection/pom.xml
+++ b/spring-framework/spring-beans-injection/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>spring-beans</artifactId>
+    <artifactId>spring-beans-injection</artifactId>
 
     <dependencies>
         <dependency>
