--- a/spring-framework/pom.xml
+++ b/spring-framework/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>spring-configuration</module>
         <module>spring-beans</module>
+        <module>spring-beans-injection</module>
     </modules>
 
     <properties>
@@ -25,6 +26,19 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
                 <version>6.1.1</version>
+            </dependency>
+
+            <!-- SR 330 Standard Annotations -->
+            <dependency>
+                <groupId>jakarta.inject</groupId>
+                <artifactId>jakarta.inject-api</artifactId>
+                <version>2.0.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>jakarta.annotation</groupId>
+                <artifactId>jakarta.annotation-api</artifactId>
+                <version>2.0.0</version>
             </dependency>
 
             <!-- Test library  -->
