ApplicationContextAware tutorial and fixes

--- a/spring-framework/pom.xml
+++ b/spring-framework/pom.xml
@@ -12,6 +12,7 @@
         <module>spring-configuration</module>
         <module>spring-beans</module>
         <module>spring-beans-injection</module>
+        <module>spring-application-context-aware</module>
     </modules>
 
     <properties>
@@ -28,13 +29,14 @@
                 <version>6.1.1</version>
             </dependency>
 
-            <!-- SR 330 Standard Annotations -->
+            <!-- JSR-330 Standard Annotations -->
             <dependency>
                 <groupId>jakarta.inject</groupId>
                 <artifactId>jakarta.inject-api</artifactId>
                 <version>2.0.0</version>
             </dependency>
 
+            <!-- JSR-250  Annotations -->
             <dependency>
                 <groupId>jakarta.annotation</groupId>
                 <artifactId>jakarta.annotation-api</artifactId>
