--- a/spring-framework/pom.xml
+++ b/spring-framework/pom.xml
@@ -15,6 +15,7 @@
         <module>spring-application-context-aware</module>
         <module>spring-application-context-event</module>
         <module>spring-bean-definition-registry-post-processor</module>
+        <module>spring-property-sources-placeholder-config</module>
     </modules>
 
     <properties>
