--- a/spring-framework/pom.xml
+++ b/spring-framework/pom.xml
@@ -18,6 +18,7 @@
         <module>spring-property-sources-placeholder-config</module>
         <module>spring-application-context-environment</module>
         <module>spring-i18n-configuration</module>
+        <module>spring-singleton-bean</module>
     </modules>
 
     <properties>
